Mark container chain of out-of-flow objects for layout correctly.

This was an error in the refactoring at https://codereview.chromium.org/1323313004.

BUG=615056

Review-Url: https://codereview.chromium.org/2042623002
Cr-Commit-Position: refs/heads/master@{#398081}

Former-commit-id: ccffaf6169c927f1eef79a02127250a39f764354